@@ -7,10 +7,9 @@ import com.google.gson.JsonParser;
 import com.google.gson.JsonPrimitive;
 import org.jspecify.annotations.Nullable;
 
+import java.io.IOException;
 import java.math.BigDecimal;
 import java.net.URI;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.time.Duration;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -57,28 +56,27 @@ final class SimpleFeatureFlagService extends SubmissionService implements Featur
     }
 
     private <T> CompletableFuture<T> sendOptRequest(final SimpleFeatureFlag<T> flag, final String path) {
-        final var requestBody = createRequestBody(flag);
+        final JsonObject requestBody = createRequestBody(flag);
         return send(path, requestBody).thenCompose(response -> {
             if (isSuccessful(response)) return fetch(flag);
             logUnsuccessfulResponse(response);
-            return CompletableFuture.failedFuture(new IllegalStateException(
-                    "Feature flag opt request failed with status %s (%s)".formatted(response.statusCode(), response.body())
+            return failedFuture(new IllegalStateException(
+                    String.format("Feature flag opt request failed with status %s (%s)", response.statusCode(), response.body())
             ));
         });
     }
 
     private <T> CompletableFuture<T> createFetch(final SimpleFeatureFlag<T> flag) {
-        final var requestBody = createRequestBody(flag);
-        final var request = createRequest(CHECK_PATH, requestBody);
-        logger.info("Fetching %s: %s", request.uri(), requestBody.toString());
-        return HTTP_CLIENT.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        final JsonObject requestBody = createRequestBody(flag);
+        logger.info("Fetching %s: %s", url.resolve(CHECK_PATH), requestBody.toString());
+        return send(CHECK_PATH, requestBody)
                 .thenApply(response -> handleFetchResponse(flag, response))
                 .whenComplete((ignored, throwable) -> fetchesInProgress.remove(flag.getId()));
     }
 
     private JsonObject createRequestBody(final SimpleFeatureFlag<?> flag) {
-        final var requestBody = new JsonObject();
-        final var attributes = new JsonObject();
+        final JsonObject requestBody = new JsonObject();
+        final JsonObject attributes = new JsonObject();
 
         requestBody.addProperty("identifier", context.getConfig().serverId().toString());
         requestBody.addProperty("key", flag.getId());
@@ -90,55 +88,58 @@ final class SimpleFeatureFlagService extends SubmissionService implements Featur
         return requestBody;
     }
 
-    private CompletableFuture<HttpResponse<String>> send(final String path, final JsonObject requestBody) {
-        return HTTP_CLIENT.sendAsync(createRequest(path, requestBody), HttpResponse.BodyHandlers.ofString());
+    private CompletableFuture<Response> send(final String path, final JsonObject requestBody) {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                return sendJson(url.resolve(path), requestBody.toString());
+            } catch (final IOException e) {
+                throw new RuntimeException(e);
+            }
+        });
     }
 
-    private HttpRequest createRequest(final String path, final JsonObject requestBody) {
-        return HttpRequest.newBuilder()
-                .POST(HttpRequest.BodyPublishers.ofString(requestBody.toString()))
-                .header("Content-Type", "application/json")
-                .header("Authorization", "Bearer " + context.getToken())
-                .timeout(TIMEOUT)
-                .uri(url.resolve(path))
-                .build();
-    }
-
-    private <T> T handleFetchResponse(final SimpleFeatureFlag<T> flag, final HttpResponse<String> response) {
+    private <T> T handleFetchResponse(final SimpleFeatureFlag<T> flag, final Response response) {
         try {
             if (!isSuccessful(response)) {
                 logUnsuccessfulResponse(response);
-                throw new IllegalStateException("Unexpected response status: %s (%s)".formatted(response.statusCode(), response.body()));
+                throw new IllegalStateException(String.format("Unexpected response status: %s (%s)", response.statusCode(), response.body()));
             }
 
-            final var body = JsonParser.parseString(response.body());
-            final var value = getValue(flag, body);
+            final JsonElement body = JsonParser.parseString(response.body());
+            final T value = getValue(flag, body);
             logger.info("Fetch returned body: %s (value: %s)", body, value);
             flag.setLastFetch(System.currentTimeMillis());
             flag.setValue(value);
             return value;
         } catch (final JsonParseException e) {
             logger.error("Unexpected response body: %s (%s)", e, response.body(), response.statusCode());
-            throw new IllegalStateException("Unexpected response body: %s (%s)".formatted(response.body(), response.statusCode()), e);
+            throw new IllegalStateException(String.format("Unexpected response body: %s (%s)", response.body(), response.statusCode()), e);
         }
     }
 
     @SuppressWarnings("unchecked")
     private <T> T getValue(final SimpleFeatureFlag<T> flag, final JsonElement body) {
-        if (!(body instanceof final JsonObject object)) {
+        if (!(body instanceof JsonObject)) {
             logger.warn("Unexpected JSON response: %s", body);
             throw new IllegalStateException("Unexpected JSON response: " + body);
         }
-        if (!(object.get("value") instanceof final JsonPrimitive primitive)) {
+        final JsonObject object = (JsonObject) body;
+        if (!(object.get("value") instanceof JsonPrimitive)) {
             logger.warn("Missing or invalid 'value' in JSON response: %s", body);
             throw new IllegalStateException("Missing or invalid 'value' in JSON response: " + body);
         }
+        final JsonPrimitive primitive = (JsonPrimitive) object.get("value");
 
-        return (T) switch (flag.getType()) {
-            case STRING -> primitive.getAsString();
-            case NUMBER -> getAsNumber(primitive);
-            case BOOLEAN -> getAsBoolean(primitive);
-        };
+        switch (flag.getType()) {
+            case STRING:
+                return (T) primitive.getAsString();
+            case NUMBER:
+                return (T) getAsNumber(primitive);
+            case BOOLEAN:
+                return (T) Boolean.valueOf(getAsBoolean(primitive));
+            default:
+                throw new IllegalStateException("Unknown feature flag type: " + flag.getType());
+        }
     }
 
     private Number getAsNumber(final JsonPrimitive primitive) {
@@ -153,14 +154,11 @@ final class SimpleFeatureFlagService extends SubmissionService implements Featur
 
     private boolean getAsBoolean(final JsonPrimitive primitive) {
         if (primitive.isBoolean()) return primitive.getAsBoolean();
-        return switch (primitive.getAsString()) {
-            case "true" -> true;
-            case "false" -> false;
-            default -> {
-                logger.warn("Expected a boolean but got: %s", primitive.getAsString());
-                throw new IllegalStateException("Expected a boolean but got: " + primitive.getAsString());
-            }
-        };
+        final String value = primitive.getAsString();
+        if ("true".equals(value)) return true;
+        if ("false".equals(value)) return false;
+        logger.warn("Expected a boolean but got: %s", value);
+        throw new IllegalStateException("Expected a boolean but got: " + value);
     }
 
     @Override
@@ -241,8 +239,14 @@ final class SimpleFeatureFlagService extends SubmissionService implements Featur
 
         @Override
         public FeatureFlagService create() throws IllegalArgumentException {
-            final var attributes = this.attributes != null ? this.attributes : Attributes.empty();
+            final Attributes attributes = this.attributes != null ? this.attributes : Attributes.empty();
             return new SimpleFeatureFlagService(context, attributes, ttl);
         }
+    }
+
+    private static <T> CompletableFuture<T> failedFuture(final Throwable throwable) {
+        final CompletableFuture<T> future = new CompletableFuture<>();
+        future.completeExceptionally(throwable);
+        return future;
     }
 }
