@@ -8,6 +8,7 @@ import org.jetbrains.annotations.Contract;
 import org.jspecify.annotations.Nullable;
 
 import java.net.URI;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
@@ -26,15 +27,17 @@ public abstract class SimpleMetrics extends SubmissionService implements Metrics
     @Contract(mutates = "io")
     protected SimpleMetrics(final Factory factory) {
         super(factory.context);
-        this.metrics = context.getConfig().additionalMetrics() ? Set.copyOf(factory.metrics) : Set.of();
+        this.metrics = context.getConfig().additionalMetrics()
+                ? Collections.unmodifiableSet(new HashSet<>(factory.metrics))
+                : Collections.emptySet();
         this.flush = factory.flush;
     }
 
     @Async.Schedule
     void startSubmitting() {
         logger.info("Starting metrics submission task");
-        final var initialDelay = TimeUnit.SECONDS.toMillis(Long.getLong("faststats.initial-delay", 30));
-        final var period = TimeUnit.MINUTES.toMillis(30);
+        final long initialDelay = TimeUnit.SECONDS.toMillis(Long.getLong("faststats.initial-delay", 30));
+        final long period = TimeUnit.MINUTES.toMillis(30);
         context.scheduleAtFixedRate(this::submit, initialDelay, period, TimeUnit.MILLISECONDS);
     }
 
@@ -95,8 +98,8 @@ public abstract class SimpleMetrics extends SubmissionService implements Metrics
     }
 
     private JsonObject createData() {
-        final var data = new JsonObject();
-        final var metrics = new JsonObject();
+        final JsonObject data = new JsonObject();
+        final JsonObject metrics = new JsonObject();
 
         appendData(metrics);
 
@@ -136,7 +139,7 @@ public abstract class SimpleMetrics extends SubmissionService implements Metrics
 
         @Override
         public Factory onFlush(final Runnable flush) {
-            final var runnable = this.flush;
+            final Runnable runnable = this.flush;
             if (runnable == null) {
                 this.flush = flush;
             } else this.flush = () -> {
